Fix pop up on IE9

--- a/app/assets/stylesheets/views/search.css.scss
+++ b/app/assets/stylesheets/views/search.css.scss
@@ -3056,7 +3056,7 @@ body .form-inputs .multi_select .select2-container-multi {
       top: 50%;
     }
 
-    @include ie-lte(8){
+    @include ie-lte(9){
       margin-top: -300px;
       margin-left: -440px;
     }
